--- a/Day6/grid.css
+++ b/Day6/grid.css
@@ -7,13 +7,14 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 200px);
-  gap: 50px 0px;
+  border: 10px solid rgb(252, 250, 250);
+  row-gap: 5px;
+  column-gap: 4px;
   list-style: none;
 }
 .items {
-  height: 200px;
-  width: 200px;
-  border: 5px solid black;
+  height: 100%;
+  width: 100%;
 }
 .items img {
   height: 100%;
@@ -27,8 +28,26 @@
   grid-row-end: 3;
 }
 .items-2 {
-  /* grid-column-start: 3;
-  grid-column-end: 3;
+  grid-column-start: 3;
+  grid-column-end: 5;
   grid-row-start: 1;
-  grid-row-end: 3; */
+  grid-row-end: 3;
+}
+.items-4 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+.items-8 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: 7;
+}
+.items-9 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 5;
+  grid-row-end: 7;
 }
