--- a/Day7/areas.css
+++ b/Day7/areas.css
@@ -7,12 +7,15 @@ body {
 header {
   grid-area: header;
   background-color: antiquewhite;
+  border: 2px solid black;
 }
 .side-bar {
   grid-area: side-bar;
   background-color: aqua;
+  border: 2px solid black;
 }
 main {
   grid-area: main;
   background-color: bisque;
+  border: 2px solid black;
 }
